	* stmpe11*: Fix a massive naming problem.  All references to STMPE11 should be
	  STMPE812.
	* arch/arm/src/stm32/stm32_otgfsdev.c: Need to enabled USB reset interrupt
	  (contributed by Erik Van Der Zalm).
	* sched/sleep.c:  Fix the return value from sleep().  The correct behavior is
	  to return the number of unwaited seconds; the implementation was always
	  returning zero.
	* sched/usleep.c and include/unistd.h:  Was a void function, but should return
	  0 on success.  usleep() needs to check the return value from sigtimedwait().
	  sigtimewait() returns the signal number that awakened it and an error (EAGAIN)
	  if the timeout expired (normal case).
	* sched/sig_timedwait.c:  Fix sigtimedwait() return value.  On a timeout, it was
	  setting the 8-bit si_signo field to -1 and eded up reported successfully awakened
	  by signal 255!  Now detects the timeout and errors -1 with errno == EGAIN.  If
	  sigtimedwait() is awakened by an unblocked signal, but it is not one of the
	  signals in the waited-for set, it will return -1 with errno == EINTR.
	* arch/arm/src/stm32_i2c.c:  Fix STM32 F2 I2C.  It is apparently bug-for-bug
	  compatible with the F4 and needs the same work-around for the missing BTF
	  signal that was needed for the F4.
	* drivers/lcd/ssd1289.*:  Fix some of the initial register settings.
	* configs/stm32f4discovery/src/up_ssd1289.c: FSMC address bit 16 is used to
	  distinguish command and data.  But FSMC address bits 0-24 correspond to ARM
	  address bits 1-25, se we need to set bit 17 in order generate output on
	  FSMC_A16.
	* arch/arm/src/lm3s/lm3s_epi.h and lm3s_timer.h:  LM3S header files
	  (contributed by Max Neklyudov).
	* arch/arm/src/stm32/stm32_irq.c:  Some of the interrupt priorities were
	  not be initialized (F2 and F4 only).  Thus, the very high numbered
	  interrupts (like UART6) and cause nested interrupts.  This leads to
	  some very difficult to debug crashes.  Fix contributed by Mike Smith.
