@@ -729,6 +729,18 @@
 
 /* DEVCFG1 */
 
+#ifdef BOARD_SOSC_ENABLE
+#  define CONFIG_PIC32MX_FSOSCEN DEVCFG1_FSOSCEN
+#else
+#  define CONFIG_PIC32MX_FSOSCEN 0
+#endif
+
+#ifdef BOARD_SOSC_IESO
+#  define CONFIG_PIC32MX_IESO DEVCFG1_IESO
+#else
+#  define CONFIG_PIC32MX_IESO 0
+#endif
+
 #undef CONFIG_PIC32MX_PBDIV
 #if BOARD_PBDIV == 1
 #  define CONFIG_PIC32MX_PBDIV DEVCFG1_FPBDIV_DIV1
@@ -740,6 +752,30 @@
 #  define CONFIG_PIC32MX_PBDIV DEVCFG1_FPBDIV_DIV8
 #else
 #  error "Unsupported BOARD_PBDIV"
+#endif
+
+#undef CONFIG_PIC32MX_POSCMOD
+#if defined(BOARD_POSC_ECMODE)
+#  define CONFIG_PIC32MX_POSCMOD DEVCFG1_POSCMOD_EC
+#elif defined(BOARD_POSC_XTMODE)
+#  define CONFIG_PIC32MX_POSCMOD DEVCFG1_POSCMOD_XT
+#elif defined(BOARD_POSC_HSMODE)
+#  define CONFIG_PIC32MX_POSCMOD DEVCFG1_POSCMOD_HS
+#elif defined(BOARD_POSC_DISABLED)
+#  define CONFIG_PIC32MX_POSCMOD DEVCFG1_POSCMOD_DIS
+#else
+#  error "Unknown board POSC mode"
+#endif
+
+#undef CONFIG_PIC32MX_FCKSM
+#if defined(BOARD_POSC_SWITCH)
+#  if defined(BOARD_POSC_FSCM) 
+#    define CONFIG_PIC32MX_FCKSM DEVCFG1_FCKSM_BOTH
+#  else
+#    define CONFIG_PIC32MX_FCKSM DEVCFG1_FCKSM_CSONLY
+#  endif
+#else
+#  define CONFIG_PIC32MX_FCKSM DEVCFG1_FCKSM_NONE
 #endif
 
 #undef CONFIG_PIC32MX_WDPS
